# cpp-gtest-proj

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  hello_test.cpp
